# active-record-sdk

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: mkdocs-gh-pages.yml  pr-rating.yml  publish.yml
Code_Reference/Exceptions/: index.html
Code_Reference/core/AARS/: index.html
Code_Reference/core/Index/: index.html
Code_Reference/core/Record/: index.html
Code_Reference/utils/: index.html
FastAPI_Cookbook/: index.html
docs/: FastAPI_Cookbook.md
docs/Code_Reference/: Exceptions.md  utils.md
docs/Code_Reference/core/: AARS.md  Record.md
docs/core/: Index.md
search/: search_index.json
src/aars/: __init__.py  core.py  exceptions.py  schema.py  utils.py
tests/: aars.py  aars_cached.py  fetch_all.py
