[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aars"
version = "0.2.5"
authors = [
  { name="Mike Hukiewitz", email="mike.hukiewitz@robotter.ai" },
]
description = "Experimental Object-Document-Mapper using pydantic to store objects on Aleph.im"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependencies]
pydantic = "^1.8.2"
aleph_client = "^0.5.0"

[project.urls]
"Homepage" = "https://github.com/aleph-im/active-record-sdk"
"Bug Tracker" = "https://github.com/aleph-im/active-record-sdk/issues"